# yacamim

./: README.md  pyproject.toml  yacamim-cli.py
tests/: test_client_gemini.py  test_main.py
yacamim/: client.py  main.py
