[tool.poetry]
name = "yacamim"
version = "0.1.0"
description = "CLI Gemini protocol client"
authors = ["Thiago Campos <ola@thigcampos.com>"]
readme = "README.md"

[tool.poetry.scripts]
yacamim = "yacamim.main:start"

[tool.poetry.dependencies]
python = "^3.10"
python-lsp-server = {extras = ["all"], version = "^1.11.0"}
python-lsp-isort = "^0.1"
pylsp-mypy = "^0.6.8"
python-lsp-black = "^2.0.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
